package edu.hitsz.supply;


public interface ASFactory {
    public abstract AbstractSupply creatSupply(int locationX, int locationY);

}
